--- a/Onecalendar.Portal/Onecalendar.WebPortal/Onecalendar.WebPortal.csproj
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Onecalendar.WebPortal.csproj
@@ -172,6 +172,7 @@
     <Content Include="Content\images\banner1.jpg" />
     <Content Include="Content\images\banner2.jpg" />
     <Content Include="Content\images\banner3.jpg" />
+    <Content Include="Content\images\C1_Logo.jpg" />
     <Content Include="Content\images\facebook.png" />
     <Content Include="Content\images\icon1.png" />
     <Content Include="Content\images\icon2.png" />
