--- a/Onecalendar.Portal/Onecalendar.WebPortal/Web.config
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Web.config
@@ -15,6 +15,17 @@
   <iConnect.dataMapping configSource="ConfigFiles\dataMapping.config" />
 
   <connectionStrings configSource="Config\ConnectionStrings.config"/>
+  <!-- ========================= START :: Authorisation ========================= -->
+  <location path="Secure">
+    <system.web>
+      <authorization>
+        <allow roles="AO"/>
+        <deny users="*"/>
+        <!--<allow users="*"/>-->
+      </authorization>
+    </system.web>
+  </location>
+  <!-- ========================= END :: Authorisation ========================= -->
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -29,6 +40,7 @@
         <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>-->
       </controls>
     </pages>
+
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
     </authentication>
@@ -52,5 +64,12 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+    <siteMap defaultProvider="AspXmlSiteMapProvider" enabled="true">
+      <providers>
+        <clear/>
+        <add name="AspXmlSiteMapProvider" type="System.Web.XmlSiteMapProvider, System.Web, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" siteMapFile="Web.sitemap" securityTrimmingEnabled="true"/>
+        <add name="StaticSiteMapProvider" type="System.Web.XmlSiteMapProvider, System.Web, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" siteMapFile="SiteMap.sitemap"/>
+      </providers>
+    </siteMap>
   </system.web>
 </configuration>
