fix the image display issue of the insert sp. added the delete of event as well when delete the course.

--- a/Onecalendar.Portal/Onecalendar.BusinessEntity/Onecalendar.BusinessEntity.csproj
+++ b/Onecalendar.Portal/Onecalendar.BusinessEntity/Onecalendar.BusinessEntity.csproj
@@ -39,6 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BIZCourseDataSet.cs">
+      <DependentUpon>BIZCourseDataSet.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="BIZCourseDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
