added the start date time and end date time. added the full calendar js TODO: adjust the ui of the date time, implement the query event from db. add event from the calendar directly

--- a/Onecalendar.Portal/OneCalendar.BusinessComponent/OneCalendar.BusinessComponent.csproj
+++ b/Onecalendar.Portal/OneCalendar.BusinessComponent/OneCalendar.BusinessComponent.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Common\Constants.cs" />
     <Compile Include="Common\CryptionUtil.cs" />
+    <Compile Include="Common\DateTimeUtil.cs" />
     <Compile Include="Common\FileUtil.cs" />
     <Compile Include="CourseBCService.cs" />
     <Compile Include="DataAccess\UserDA.cs" />
