--- a/Onecalendar.Portal/Onecalendar.WebPortal/Web.config
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,13 +6,13 @@
 <configuration>
   <configSections>
     <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data" restartOnExternalChanges="true" />
-    <section name="iConnect.dataAccess" type="NCS.IConnect.Helpers.Data.Configuration.DataAccessSettings, NCS.IConnect.Helpers.Data" restartOnExternalChanges="true" />
-    <section name="iConnect.dataMapping" type="NCS.IConnect.DataMappings.Configuration.MappingSettings,NCS.IConnect.DataMappings" restartOnExternalChanges="true" />
+    <section name="NetFuture.dataAccess" type="Net.Future.Helpers.Data.Configuration.DataAccessSettings, Net.Future.Helpers.Data" restartOnExternalChanges="true" />
+    <section name="NetFuture.dataMapping" type="Net.Future.DataMappings.Configuration.MappingSettings,Net.Future.DataMappings" restartOnExternalChanges="true" />
   </configSections>
   <dataConfiguration defaultDatabase="OnecalendarDatabase">
   </dataConfiguration>
-  <iConnect.dataAccess configSource="ConfigFiles\dbHelper.config" />
-  <iConnect.dataMapping configSource="ConfigFiles\dataMapping.config" />
+  <NetFuture.dataAccess configSource="ConfigFiles\dbHelper.config" />
+  <NetFuture.dataMapping configSource="ConfigFiles\dataMapping.config" />
 
   <connectionStrings configSource="Config\ConnectionStrings.config" />
   <appSettings configSource="Config\AppSettings.config" />
