--- a/Onecalendar.Portal/Onecalendar.WebPortal/Onecalendar.WebPortal.csproj
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Onecalendar.WebPortal.csproj
@@ -63,9 +63,9 @@
     <Reference Include="Microsoft.Practices.Unity.Interception.Configuration">
       <HintPath>..\Library\Microsoft.Practices.Unity.Interception.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="NCS.IConnect.Helpers.Data, Version=4.2.0.0, Culture=neutral, PublicKeyToken=a20767533a162583, processorArchitecture=MSIL">
+    <Reference Include="Net.Future.Transactions, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Library\NCS.IConnect.Helpers.Data.dll</HintPath>
+      <HintPath>..\Library\Net.Future.Transactions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
