--- a/Onecalendar.Portal/Onecalendar.WebPortal/Web.config
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Web.config
@@ -26,6 +26,24 @@
       </authorization>
     </system.web>
   </location>
+  <location path="Secure/Course">
+    <system.web>
+      <authorization>
+        <allow roles="PO,AO" />
+        <deny users="*" />
+        <!--<allow users="*"/>-->
+      </authorization>
+    </system.web>
+  </location>
+  <location path="Secure/Event">
+    <system.web>
+      <authorization>
+        <allow roles="PO,AO" />
+        <deny users="*" />
+        <!--<allow users="*"/>-->
+      </authorization>
+    </system.web>
+  </location>
   <!-- ========================= END :: Authorisation ========================= -->
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
