--- a/Onecalendar.Portal/Onecalendar.WebPortal/Onecalendar.WebPortal.csproj
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Onecalendar.WebPortal.csproj
@@ -317,6 +317,7 @@
     <Content Include="Handler\ImageHandler.ashx" />
     <Content Include="Handler\JsonCalendarHandler.ashx" />
     <Content Include="Handler\JSonFormatCourses.ashx" />
+    <Content Include="SiteHome.Master" />
     <None Include="Properties\PublishProfiles\New.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Public\UserRegistration.aspx" />
@@ -428,6 +429,13 @@
     </Compile>
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SiteHome.Master.cs">
+      <DependentUpon>SiteHome.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SiteHome.Master.designer.cs">
+      <DependentUpon>SiteHome.Master</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
